--- a/release_notes/V4.16.0.md
+++ b/release_notes/V4.16.0.md
@@ -19,7 +19,7 @@ dark_theme_natal_chart = KerykeionChartSVG(dark_theme_subject, theme="dark")
 dark_theme_natal_chart.makeSVG()
 ```
 
-You can also choose not to set any theme, which makes it easier to override the default CSS variables. For more details, check out the [documentation](https://www.kerykeion.net/docs/examples/theming).
+You can also choose not to set any theme, which makes it easier to override the default CSS variables. For more details, check out the [documentation](https://www.kerykeion.net/docs//theming).
 
 ## 🌐 Minimalist Charts & Aspect Table
 
@@ -27,13 +27,13 @@ You can also choose not to set any theme, which makes it easier to override the 
 
 - **Separate Aspect Table SVG**: Now, you can extract the aspect table as a separate SVG file, giving you more flexibility in your analysis and presentations.
 
-For further information, see the [details](https://www.kerykeion.net/docs/examples/whee-and-grid-only).
+For further information, see the [details](https://www.kerykeion.net/docs//whee-and-grid-only).
 
 ## 🔄 Synastry & Transit Chart Enhancements
 
 - **Aspect Table Grid View**: You can now display aspects in a grid format, providing a clearer and more organized view compared to the traditional list format.
 
-More details on these updates can be found [here](https://www.kerykeion.net/docs/examples/synastry-chart).
+More details on these updates can be found [here](https://www.kerykeion.net/docs//synastry-chart).
 
 ---
 
