--- a/release_notes/V4.26.0.md
+++ b/release_notes/V4.26.0.md
@@ -3,7 +3,7 @@
 ### Overview
 - Introduces the new `TransitsTimeRangeFactory` class for calculating transit events across a specified time range.
 - Compares ephemeris data points with a subject’s natal chart to identify significant astrological aspects.
-- Supports user-defined active points, aspects, and an optional external configuration file.
+- Supports user-defined active points, aspects.
 
 ### Key Features
 - Produces a `TransitsTimeRangeModel` that consolidates transit dates, the natal chart, and all computed transit events.
