feat: nodes renamed

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -43,6 +43,210 @@
 - `kerykeion/enums.py`, the entire `kr_types/` tree, and scattered config files were removed; everything is now centralised in `schemas` and `settings`.
 - Packaging migrated from Poetry to PEP 621 + Hatchling (`pyproject.toml`), with dependency locking handled via `uv.lock` and dependency groups.
 - `DEFAULT_ACTIVE_POINTS` and `DEFAULT_ACTIVE_ASPECTS` are more restrictive; aspects involving chart axes use the dedicated 1° orb.
+- **Lunar nodes naming**: All lunar node-related fields have been renamed for clarity (see Migration Guide below).
+
+## Migration Guide: Lunar Nodes Naming
+
+### Breaking Changes Summary
+
+In version 5.0, we have renamed all lunar node-related fields and constants to be more explicit and consistent:
+
+| Old Name (v4.x) | New Name (v5.0) |
+|-----------------|-----------------|
+| `Mean_Node` | `Mean_North_Lunar_Node` |
+| `True_Node` | `True_North_Lunar_Node` |
+| `Mean_South_Node` | `Mean_South_Lunar_Node` |
+| `True_South_Node` | `True_South_Lunar_Node` |
+
+### Why This Change?
+
+The previous naming was ambiguous:
+- `Mean_Node` and `True_Node` didn't specify they were **North** nodes
+- This caused confusion when working with both North and South nodes
+- The new names are self-documenting and follow astrological conventions
+
+### Migration Steps
+
+#### 1. Update Model Field Access
+
+**Old Code:**
+```python
+from kerykeion import AstrologicalSubjectFactory
+
+subject = AstrologicalSubjectFactory.from_birth_data(
+    "John Doe", 1990, 1, 1, 12, 0, "London", "GB"
+)
+
+# Old way
+print(subject.mean_node)
+print(subject.true_node)
+print(subject.mean_south_node)
+print(subject.true_south_node)
+```
+
+**New Code:**
+```python
+from kerykeion import AstrologicalSubjectFactory
+
+subject = AstrologicalSubjectFactory.from_birth_data(
+    "John Doe", 1990, 1, 1, 12, 0, "London", "GB"
+)
+
+# New way
+print(subject.mean_north_lunar_node)
+print(subject.true_north_lunar_node)
+print(subject.mean_south_lunar_node)
+print(subject.true_south_lunar_node)
+```
+
+#### 2. Update Active Points Lists
+
+**Old Code:**
+```python
+from kerykeion import AstrologicalSubjectFactory
+
+active_points = [
+    "Sun", "Moon", "Mercury", "Venus", "Mars",
+    "Mean_Node", "True_Node", "Mean_South_Node", "True_South_Node"
+]
+
+subject = AstrologicalSubjectFactory.from_birth_data(
+    "John Doe", 1990, 1, 1, 12, 0, "London", "GB",
+    active_points=active_points
+)
+```
+
+**New Code:**
+```python
+from kerykeion import AstrologicalSubjectFactory
+
+active_points = [
+    "Sun", "Moon", "Mercury", "Venus", "Mars",
+    "Mean_North_Lunar_Node", "True_North_Lunar_Node",
+    "Mean_South_Lunar_Node", "True_South_Lunar_Node"
+]
+
+subject = AstrologicalSubjectFactory.from_birth_data(
+    "John Doe", 1990, 1, 1, 12, 0, "London", "GB",
+    active_points=active_points
+)
+```
+
+#### 3. Update Type Hints and Literals
+
+**Old Code:**
+```python
+from kerykeion.schemas.kr_literals import AstrologicalPoint
+from typing import List
+
+def get_nodes(subject) -> List[AstrologicalPoint]:
+    return ["Mean_Node", "True_Node"]  # This will cause a type error in v5
+```
+
+**New Code:**
+```python
+from kerykeion.schemas.kr_literals import AstrologicalPoint
+from typing import List
+
+def get_nodes(subject) -> List[AstrologicalPoint]:
+    return ["Mean_North_Lunar_Node", "True_North_Lunar_Node"]
+```
+
+#### 4. Update Custom Settings/Configurations
+
+If you have custom `kr.config.json` files or language settings, update all lunar node references:
+
+**Old JSON:**
+```json
+{
+  "language_settings": {
+    "EN": {
+      "celestial_points": {
+        "Mean_Node": "Mean Node",
+        "True_Node": "True Node",
+        "Mean_South_Node": "Mean South Node",
+        "True_South_Node": "True South Node"
+      }
+    }
+  }
+}
+```
+
+**New JSON:**
+```json
+{
+  "language_settings": {
+    "EN": {
+      "celestial_points": {
+        "Mean_North_Lunar_Node": "Mean North Lunar Node",
+        "True_North_Lunar_Node": "True North Lunar Node",
+        "Mean_South_Lunar_Node": "Mean South Lunar Node",
+        "True_South_Lunar_Node": "True South Lunar Node"
+      }
+    }
+  }
+}
+```
+
+### Backward Compatibility
+
+For backward compatibility, the legacy `AstrologicalSubject` wrapper in `kerykeion.backword` provides deprecated properties:
+
+```python
+from kerykeion import AstrologicalSubject  # Legacy wrapper
+
+subject = AstrologicalSubject("John Doe", 1990, 1, 1, 12, 0, "London", "GB")
+
+# This still works but shows a DeprecationWarning
+print(subject.mean_node)  # Maps to mean_north_lunar_node
+print(subject.true_node)  # Maps to true_north_lunar_node
+```
+
+**⚠️ Warning:** This compatibility layer is deprecated and will be removed in v6.0. Please migrate to the new naming as soon as possible.
+
+### Automated Migration
+
+You can use the following sed commands to update your codebase:
+
+```bash
+# Update Python files
+find . -name "*.py" -type f -exec sed -i.bak \
+    -e 's/\.mean_node/.mean_north_lunar_node/g' \
+    -e 's/\.true_node/.true_north_lunar_node/g' \
+    -e 's/\.mean_south_node/.mean_south_lunar_node/g' \
+    -e 's/\.true_south_node/.true_south_lunar_node/g' \
+    -e 's/"Mean_Node"/"Mean_North_Lunar_Node"/g' \
+    -e 's/"True_Node"/"True_North_Lunar_Node"/g' \
+    -e 's/"Mean_South_Node"/"Mean_South_Lunar_Node"/g' \
+    -e 's/"True_South_Node"/"True_South_Lunar_Node"/g' \
+    -e "s/'Mean_Node'/'Mean_North_Lunar_Node'/g" \
+    -e "s/'True_Node'/'True_North_Lunar_Node'/g" \
+    -e "s/'Mean_South_Node'/'Mean_South_Lunar_Node'/g" \
+    -e "s/'True_South_Node'/'True_South_Lunar_Node'/g" \
+    {} \;
+```
+
+**Note:** Always review automated changes and test thoroughly before committing.
+
+### Testing Your Migration
+
+After migrating, ensure your tests pass:
+
+```bash
+pytest tests/
+```
+
+If you encounter any issues, please:
+1. Check that all lunar node references have been updated
+2. Verify custom configuration files use new names
+3. Update any saved/cached data structures that reference nodes
+
+### Need Help?
+
+If you encounter migration issues:
+- Check the [GitHub Discussions](https://github.com/g-battaglia/kerykeion/discussions)
+- Open an issue on [GitHub](https://github.com/g-battaglia/kerykeion/issues)
+- Review the updated documentation at [kerykeion.readthedocs.io](https://kerykeion.readthedocs.io)
 
 ## Other notable changes
 - `kerykeion/settings` introduces legacy presets (`settings/legacy/*`) and caches configuration merges via `functools.lru_cache`.
