fix: docs updated

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -20,7 +20,7 @@
 - Visual assets were refreshed with updated themes (`classic`, `dark`, `dark-high-contrast`, `light`, `strawberry`), polished XML templates, and a refreshed fixed stars dataset (`sweph/sefstars.txt`).
 
 ### Upgraded astrological analysis
-- `AspectsFactory` unifies single- and dual-chart aspects with axis filters (`DEFAULT_AXIS_ORBIT = 1`) and keeps legacy aliases (`NatalAspectsModel`, `SynastryAspectsModel`) for compatibility.
+- `AspectsFactory` unifies single- and dual-chart aspects, keeps legacy aliases (`NatalAspectsModel`, `SynastryAspectsModel`) for compatibility, and introduces the `axis_orb_limit` keyword to optionally reintroduce traditional axis orbs while defaulting to modern practice (axes share the same orb as planets).
 - `HouseComparisonFactory`, `RelationshipScoreFactory`, and the new `ChartDataFactory` integrate house overlays, affinity scoring, and elemental statistics.
 - `PlanetaryReturnFactory` computes Solar and Lunar returns via Swiss Ephemeris (methods `next_return_from_year`, `next_return_from_month_and_year`, `next_return_from_iso_formatted_time`).
 - `EphemerisDataFactory` + `TransitsTimeRangeFactory` build subject time series and transit snapshots with safeguards on step size and range.
@@ -42,7 +42,7 @@
 - Legacy classes (`AstrologicalSubject`, `NatalAspects`, `SynastryAspects`, `KerykeionChartSVG`, `relationship_score`, `transits_time_range`, `ephemeris_data`) have been removed in favour of their factory-based counterparts.
 - `kerykeion/enums.py`, the entire `kr_types/` tree, and scattered config files were removed; everything is now centralised in `schemas` and `settings`.
 - Packaging migrated from Poetry to PEP 621 + Hatchling (`pyproject.toml`), with dependency locking handled via `uv.lock` and dependency groups.
-- `DEFAULT_ACTIVE_POINTS` and `DEFAULT_ACTIVE_ASPECTS` are more restrictive; aspects involving chart axes use the dedicated 1° orb.
+- `DEFAULT_ACTIVE_POINTS` and `DEFAULT_ACTIVE_ASPECTS` are more restrictive; chart axes no longer have a forced 1° orb—use the new `axis_orb_limit` keyword argument when you need a traditional axis threshold.
 - **Lunar nodes naming**: All lunar node-related fields have been renamed for clarity (see Migration Guide below).
 
 ## Migration Guide: Lunar Nodes Naming
