feat: cleanup settings logic
Simplify translation infrastructure: replace JSON config with Python dict, load default strings in memory, allow optional dict overrides only. Refactor chart/legacy wrappers, tests, and docs to use the new lightweight translation API.

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -154,7 +154,7 @@ def get_nodes(subject) -> List[AstrologicalPoint]:
 
 #### 4. Update Custom Settings/Configurations
 
-If you have custom `kr.config.json` files or language settings, update all lunar node references:
+If you have custom `translation_strings.py` files or language settings, update all lunar node references:
 
 **Old JSON:**
 ```json
