fix: docs updated

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -152,40 +152,28 @@ def get_nodes(subject) -> List[AstrologicalPoint]:
     return ["Mean_North_Lunar_Node", "True_North_Lunar_Node"]
 ```
 
-#### 4. Update Custom Settings/Configurations
+#### 4. Update Custom Settings/Translations
 
-If you have custom `translation_strings.py` files or language settings, update all lunar node references:
+If you ship a custom `LANGUAGE_SETTINGS` dictionary (or pass overrides to `ChartDrawer`), update lunar node keys to the new names:
 
-**Old JSON:**
-```json
-{
-  "language_settings": {
+```python
+LANGUAGE_SETTINGS = {
     "EN": {
-      "celestial_points": {
-        "Mean_Node": "Mean Node",
-        "True_Node": "True Node",
-        "Mean_South_Node": "Mean South Node",
-        "True_South_Node": "True South Node"
-      }
+        "celestial_points": {
+            # Old -> new key names
+            "Mean_North_Lunar_Node": "Mean North Lunar Node",
+            "True_North_Lunar_Node": "True North Lunar Node",
+            "Mean_South_Lunar_Node": "Mean South Lunar Node",
+            "True_South_Lunar_Node": "True South Lunar Node",
+        }
     }
-  }
 }
 ```
 
-**New JSON:**
-```json
-{
-  "language_settings": {
-    "EN": {
-      "celestial_points": {
-        "Mean_North_Lunar_Node": "Mean North Lunar Node",
-        "True_North_Lunar_Node": "True North Lunar Node",
-        "Mean_South_Lunar_Node": "Mean South Lunar Node",
-        "True_South_Lunar_Node": "True South Lunar Node"
-      }
-    }
-  }
-}
+Custom packs can be supplied at runtime via:
+
+```python
+ChartDrawer(chart_data=data, chart_language="PT", language_pack=custom_dict)
 ```
 
 ### Backward Compatibility
