fix: legacy settings cleanup

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -237,7 +237,7 @@ If you encounter migration issues:
 - Review the updated documentation at [kerykeion.readthedocs.io](https://kerykeion.readthedocs.io)
 
 ## Other notable changes
-- `kerykeion/settings` introduces legacy presets (`settings/legacy/*`) and caches configuration merges via `functools.lru_cache`.
+- `kerykeion/settings` consolidates chart presets in `settings/chart_defaults.py` and caches configuration merges via `functools.lru_cache`.
 - `utilities.py` now hosts helpers for distributing percentages, inlining CSS, computing element/quality stats, and normalising active points.
 - Test datasets and fixtures were regenerated (new reference SVGs, updated expected aspects, complete factory coverage).
 - README and CHANGELOG received a full rewrite with Pydantic 2 examples, theming guidance, and LLM integration notes.
