feat: add configurable weighting for element distributions
- wire distribution_method and custom weights through all ChartDataFactory helpers
- ship curated default map plus overrides for pure count and bespoke weighting
- update docs, release notes, and regression fixtures to reflect new calculations

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -24,6 +24,7 @@
 - `HouseComparisonFactory`, `RelationshipScoreFactory`, and the new `ChartDataFactory` integrate house overlays, affinity scoring, and elemental statistics.
 - `PlanetaryReturnFactory` computes Solar and Lunar returns via Swiss Ephemeris (methods `next_return_from_year`, `next_return_from_month_and_year`, `next_return_from_iso_formatted_time`).
 - `EphemerisDataFactory` + `TransitsTimeRangeFactory` build subject time series and transit snapshots with safeguards on step size and range.
+- Element and modality distributions now default to a curated weighted map (Sun/Moon/Asc = 2.0, angles 1.5, personal planets 1.5, social planets 1.0, outers 0.5, etc.) and expose `distribution_method`/`custom_distribution_weights` hooks for equal counts or bespoke weighting across single and dual charts.
 
 ### Documentation, examples, and tooling
 - Documentation has been rewritten in `site-docs/*.md`, with each factory owning a detailed guide and example outputs.
