--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -18,6 +18,7 @@
 - `ChartDataFactory` produces data enriched with **element/quality distributions, relationship scores, house comparison**, and convenience helpers for each chart type (natal, synastry, transit, composite, returns).
 - `ChartDrawer` now focuses solely on SVG rendering: it supports minification, CSS inlining, and wheel/aspect-only exports (`save_svg`, `save_wheel_only_svg_file`, `save_aspect_grid_only_svg_file`).
 - Visual assets were refreshed with updated themes (`classic`, `dark`, `dark-high-contrast`, `light`, `strawberry`), polished XML templates, and a refreshed fixed stars dataset (`sweph/sefstars.txt`).
+- A brand-new Black & White theme renders glyphs, rings, and aspects in solid black, making natal charts printer-friendly on monochrome devices.
 
 ### Upgraded astrological analysis
 - `AspectsFactory` unifies single- and dual-chart aspects, keeps legacy aliases (`NatalAspectsModel`, `SynastryAspectsModel`) for compatibility, and introduces the `axis_orb_limit` keyword to optionally reintroduce traditional axis orbs while defaulting to modern practice (axes share the same orb as planets).
