--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -35,8 +35,10 @@
 
 ## Compatibility & migration from v4
 - Import directly from the package root (`from kerykeion import AstrologicalSubjectFactory, ChartDataFactory, ChartDrawer, ...`).
-- `kerykeion.backword` provides deprecated wrappers (`AstrologicalSubject`, `KerykeionChartSVG`, `SynastryAspects`) so existing code keeps running while pointing to the new APIs.
-- `kr_types` has been replaced by `kerykeion.schemas`; update exceptions, literals, and model imports accordingly.
+- `kerykeion.backword` provides deprecated wrappers (`AstrologicalSubject`, `KerykeionChartSVG`, `NatalAspects`, `SynastryAspects`) so existing code keeps running while pointing to the new APIs.
+- `kr_types` module path still works but shows deprecation warnings; update to `kerykeion.schemas`.
+- Type aliases `Planet` and `AxialCusps` unified as `AstrologicalPoint`; legacy aliases available in v5 without warnings when imported from `schemas`.
+- Backward compatibility layer (`kr_types` module and legacy wrappers) will be **removed in v6.0**.
 - Relationship scoring now lives in `RelationshipScoreFactory` and the models returned by `ChartDataFactory`.
 - Regeneration scripts (`scripts/regenerate_*`) realign fixtures and custom SVG assets with the new pipeline.
 
