--- a/release_notes/v5.4.0.md
+++ b/release_notes/v5.4.0.md
@@ -2,135 +2,145 @@
 
 ## Highlights
 
-- **New cusp comparison grids** for Transit, Synastry, and Dual Return charts, with localized labels and consistent layout.
-- **Dual Return charts overhauled** to visually match Synastry: two house-comparison tables plus two cusp-comparison tables, and a wheel that shows return planets with indicators and degree labels.
-- **Extended house-comparison model & utilities** to handle cusps in reciprocal houses.
-- **Localization completed** for cusp-related strings across all supported languages.
-- **Reports & context serialization** now include cusp comparison data.
-- **SVG fixtures regenerated** to reflect the new layouts and labels.
+-   **New cusp comparison grids** for Transit, Synastry, and Dual Return charts, with localized labels and consistent layout.
+-   **Dual Return charts overhauled** to visually match Synastry: two house-comparison tables plus two cusp-comparison tables, and a wheel that shows return planets with indicators and degree labels.
+-   **Extended house-comparison model & utilities** to handle cusps in reciprocal houses.
+-   **Localization completed** for cusp-related strings across all supported languages.
+-   **Reports & context serialization** now include cusp comparison data.
+-   **SVG fixtures regenerated** to reflect the new layouts and labels.
+-   **Enhanced Degree Indicators** added to all single charts and inner wheels, partially toggleable.
 
 ---
 
 ## 1. Cusp Comparison Grids
 
 **Files:**
-- `kerykeion/charts/charts_utils.py`
-- `kerykeion/charts/chart_drawer.py`
-- `kerykeion/settings/translation_strings.py`
+
+-   `kerykeion/charts/charts_utils.py`
+-   `kerykeion/charts/chart_drawer.py`
+-   `kerykeion/settings/translation_strings.py`
 
 ### What changed
 
-- Extended `draw_cusp_comparison_grid` and `draw_single_cusp_comparison_grid` to:
-  - Use **numeric house identifiers** (e.g. "Cusp 1", "Cusp 2") instead of internal names like `"First_House"`.
-  - Rely on localized base labels (`"cusp"`, `"house"`, `"cusp_position_comparison"`) for all languages.
-  - Align the **"Cusp Position Comparison"** title vertically and with spacing consistent with **"House Position Comparison"**.
+-   Extended `draw_cusp_comparison_grid` and `draw_single_cusp_comparison_grid` to:
 
-- For **Synastry** charts:
-  - The cusp comparison is rendered as **two tables side-by-side** at the far right of the chart area (one per subject) with minimal gap and a fixed table width.
-  - Dynamic width estimation in `ChartDrawer._estimate_required_width_full` now includes both cusp tables plus a small right margin to avoid clipping.
+    -   Use **numeric house identifiers** (e.g. "Cusp 1", "Cusp 2") instead of internal names like `"First_House"`.
+    -   Rely on localized base labels (`"cusp"`, `"house"`, `"cusp_position_comparison"`) for all languages.
+    -   Align the **"Cusp Position Comparison"** title vertically and with spacing consistent with **"House Position Comparison"**.
 
-- Introduced and wired the flag `show_cusp_position_comparison` in `ChartDrawer`:
-  - When enabled, the SVG width is expanded and cusp tables are drawn.
-  - When disabled, layout falls back to the legacy "house-only" view.
+-   For **Synastry** charts:
+
+    -   The cusp comparison is rendered as **two tables side-by-side** at the far right of the chart area (one per subject) with minimal gap and a fixed table width.
+    -   Dynamic width estimation in `ChartDrawer._estimate_required_width_full` now includes both cusp tables plus a small right margin to avoid clipping.
+
+-   Introduced and wired the flag `show_cusp_position_comparison` in `ChartDrawer`:
+    -   When enabled, the SVG width is expanded and cusp tables are drawn.
+    -   When disabled, layout falls back to the legacy "house-only" view.
 
 ---
 
 ## 2. Dual Return Charts — Layout & Wheel
 
 **Files:**
-- `kerykeion/charts/chart_drawer.py`
-- `kerykeion/charts/draw_planets.py`
+
+-   `kerykeion/charts/chart_drawer.py`
+-   `kerykeion/charts/draw_planets.py`
 
 ### Layout (house + cusp tables)
 
-- The **DualReturnChart** branch in `ChartDrawer` now mirrors Synastry:
+-   The **DualReturnChart** branch in `ChartDrawer` now mirrors Synastry:
 
-  - **Two house position tables**:
-    - Table 1: Natal points in Return houses.
-    - Table 2: Return points in Natal houses.
-    - Labels use generic localized terms: `"Natal"` and `"Return"` for subject names, without hardcoding "Solar/Lunar" into house column headings.
+    -   **Two house position tables**:
 
-  - **Two cusp tables side-by-side**, aligned to the far right:
-    - Left cusp table:
-      - Owner column: `"<Natal> Cusp"`.
-      - Projected column: `"Return House"` (generic, no "Solar/Lunar").
-    - Right cusp table:
-      - Owner column: `"Return Cusp"` (localized `return_cusp` key).
-      - Projected column: `"<Natal> House"`.
+        -   Table 1: Natal points in Return houses.
+        -   Table 2: Return points in Natal houses.
+        -   Labels use generic localized terms: `"Natal"` and `"Return"` for subject names, without hardcoding "Solar/Lunar" into house column headings.
 
-  - Width estimation updated so that:
-    - Both house tables plus both cusp tables fit without clipping.
-    - A small extra margin is reserved to the right for readability.
+    -   **Two cusp tables side-by-side**, aligned to the far right:
+
+        -   Left cusp table:
+            -   Owner column: `"<Natal> Cusp"`.
+            -   Projected column: `"Return House"` (generic, no "Solar/Lunar").
+        -   Right cusp table:
+            -   Owner column: `"Return Cusp"` (localized `return_cusp` key).
+            -   Projected column: `"<Natal> House"`.
+
+    -   Width estimation updated so that:
+        -   Both house tables plus both cusp tables fit without clipping.
+        -   A small extra margin is reserved to the right for readability.
 
 ### Wheel rendering (planets, indicators, degrees)
 
-- `draw_planets` has been extended so that `chart_type == "DualReturnChart"` is treated like a proper **dual chart**, not a Transit-only simplification:
+-   `draw_planets` has been extended so that `chart_type == "DualReturnChart"` is treated like a proper **dual chart**, not a Transit-only simplification:
 
-  - Validation: DualReturn now **requires** secondary celestial points (return subject).
-  - Secondary/return planets are drawn using `_draw_secondary_points`, exactly as for Synastry/Return:
-    - Symbols on the outer wheel.
-    - Radial indicator lines.
-    - Rotated degree text around the circle.
-  - Scale factors and radii:
-    - `DualReturnChart` uses the same symbol scale and ring "dropin" values as Synastry/Return, for a consistent look-and-feel.
-  - Existing handling for Natal and Transit charts remains unchanged.
+    -   Validation: DualReturn now **requires** secondary celestial points (return subject).
+    -   Secondary/return planets are drawn using `_draw_secondary_points`, exactly as for Synastry/Return:
+        -   Symbols on the outer wheel.
+        -   Radial indicator lines.
+        -   Rotated degree text around the circle.
+    -   Scale factors and radii:
+        -   `DualReturnChart` uses the same symbol scale and ring "dropin" values as Synastry/Return, for a consistent look-and-feel.
+    -   Existing handling for Natal and Transit charts remains unchanged.
 
 ---
 
 ## 3. House Comparison Model & Utilities
 
 **Files:**
-- `kerykeion/schemas/kr_models.py`
-- `kerykeion/house_comparison/house_comparison_factory.py`
-- `kerykeion/house_comparison/house_comparison_utils.py`
+
+-   `kerykeion/schemas/kr_models.py`
+-   `kerykeion/house_comparison/house_comparison_factory.py`
+-   `kerykeion/house_comparison/house_comparison_utils.py`
 
 ### Model extensions
 
-- `HouseComparisonModel` gains two new fields (with list defaults):
+-   `HouseComparisonModel` gains two new fields (with list defaults):
 
-  - `first_cusps_in_second_houses: List[PointInHouseModel]`
-  - `second_cusps_in_first_houses: List[PointInHouseModel]`
+    -   `first_cusps_in_second_houses: List[PointInHouseModel]`
+    -   `second_cusps_in_first_houses: List[PointInHouseModel]`
 
-  These mirror the existing `first_points_in_second_houses` and `second_points_in_first_houses`, but for **house cusps** instead of planetary points.
+    These mirror the existing `first_points_in_second_houses` and `second_points_in_first_houses`, but for **house cusps** instead of planetary points.
 
 ### Factory & utilities
 
-- `HouseComparisonFactory.get_house_comparison()` now additionally computes:
-  - `first_cusps_in_second_houses`
-  - `second_cusps_in_first_houses`
-  via the new utility.
+-   `HouseComparisonFactory.get_house_comparison()` now additionally computes:
 
-- New helper: `calculate_cusps_in_reciprocal_houses` in `house_comparison_utils.py`:
+    -   `first_cusps_in_second_houses`
+    -   `second_cusps_in_first_houses`
+        via the new utility.
 
-  - Uses `get_houses_list` and the existing `get_planet_house` / `get_house_number` utilities to project each cusp from one subject into the other subjects house system.
-  - Implements robust **cusp house number extraction**, handling:
-    - Names like `"House 1"` (simple split + parse),
-    - Fallback via regex on numeric suffixes,
-    - Final fallback to positional index if parsing fails.
-  - Produces `PointInHouseModel` instances for cusps, with:
-    - Original owner house number & name.
-    - Projected house number & name.
-    - Projected house owners name.
+-   New helper: `calculate_cusps_in_reciprocal_houses` in `house_comparison_utils.py`:
+
+    -   Uses `get_houses_list` and the existing `get_planet_house` / `get_house_number` utilities to project each cusp from one subject into the other subjects house system.
+    -   Implements robust **cusp house number extraction**, handling:
+        -   Names like `"House 1"` (simple split + parse),
+        -   Fallback via regex on numeric suffixes,
+        -   Final fallback to positional index if parsing fails.
+    -   Produces `PointInHouseModel` instances for cusps, with:
+        -   Original owner house number & name.
+        -   Projected house number & name.
+        -   Projected house owners name.
 
 ---
 
 ## 4. Localization & Translation Strings
 
 **File:**
-- `kerykeion/settings/translation_strings.py`
+
+-   `kerykeion/settings/translation_strings.py`
 
 ### What changed
 
-- Added/standardized keys across all supported languages (EN, FR, PT, IT, CN, ES, ...):
+-   Added/standardized keys across all supported languages (EN, FR, PT, IT, CN, ES, ...):
 
-  - `"cusp_position_comparison"`  title for cusp comparison section.
-  - `"transit_cusp"`  label for transit cusps.
-  - `"return_cusp"`  label for return cusps.
-  - `"house"`  base label used in `"Return House"`, `"Natal House"`, etc.
+    -   `"cusp_position_comparison"`  title for cusp comparison section.
+    -   `"transit_cusp"`  label for transit cusps.
+    -   `"return_cusp"`  label for return cusps.
+    -   `"house"`  base label used in `"Return House"`, `"Natal House"`, etc.
 
-- Fixed Spanish strings to:
-  - Introduce cusp-related labels.
-  - Adjust `"return_point"` and `"natal"` to consistent localized values.
+-   Fixed Spanish strings to:
+    -   Introduce cusp-related labels.
+    -   Adjust `"return_point"` and `"natal"` to consistent localized values.
 
 These keys are now used by chart rendering and new tables, so all languages can display cusp-comparison content correctly.
 
@@ -139,46 +149,73 @@ These keys are now used by chart rendering and new tables, so all languages can 
 ## 5. Context Serialization & Reporting
 
 **Files:**
-- `kerykeion/context_serializer.py`
-- `kerykeion/report.py`
+
+-   `kerykeion/context_serializer.py`
+-   `kerykeion/report.py`
 
 ### Context serialization
 
-- `to_context` and exports extended to ensure:
-  - `HouseComparisonModel` (including cusp-related lists) can be serialized via `house_comparison_to_context`.
-  - `PointInHouseModel` remains fully supported.
+-   `to_context` and exports extended to ensure:
+    -   `HouseComparisonModel` (including cusp-related lists) can be serialized via `house_comparison_to_context`.
+    -   `PointInHouseModel` remains fully supported.
 
 ### Report generation
 
-- `ReportGenerator` now includes **cusp comparison** in textual reports when available:
-  - Adds sections for:
-    - `<first_subject_name> cusps in <second_subject_name> houses`
-    - `<second_subject_name> cusps in <first_subject_name> houses`
-  - Uses the same `_render_point_in_house_table` helper that is already used for point-in-house listings.
-- Minor docstring formatting cleanups around date-formatting helpers.
+-   `ReportGenerator` now includes **cusp comparison** in textual reports when available:
+    -   Adds sections for:
+        -   `<first_subject_name> cusps in <second_subject_name> houses`
+        -   `<second_subject_name> cusps in <first_subject_name> houses`
+    -   Uses the same `_render_point_in_house_table` helper that is already used for point-in-house listings.
+-   Minor docstring formatting cleanups around date-formatting helpers.
 
 ---
 
 ## 6. SVG Fixtures
 
 **Files:**
-- Numerous under `tests/charts/svg/*.svg`
+
+-   Numerous under `tests/charts/svg/*.svg`
 
 ### What changed
 
-- All reference SVGs were regenerated to capture:
-  - New cusp comparison grids in Transit, Synastry, and Dual Return charts.
-  - Updated Dual Return wheel layout.
-  - New labels ("Cusp Position Comparison", "Return Cusp", "Return House", etc.).
-  - Updated dynamic widths so that new tables are not clipped.
+-   All reference SVGs were regenerated to capture:
+    -   New cusp comparison grids in Transit, Synastry, and Dual Return charts.
+    -   Updated Dual Return wheel layout.
+    -   New labels ("Cusp Position Comparison", "Return Cusp", "Return House", etc.).
+    -   Updated dynamic widths so that new tables are not clipped.
+
+These changes are **expected** and align tests with the new visual behavior.
 
 These changes are **expected** and align tests with the new visual behavior.
 
 ---
 
+## 7. Enhanced Degree Indicators
+
+**Files:**
+
+-   `kerykeion/charts/draw_planets.py`
+-   `kerykeion/charts/chart_drawer.py`
+
+### Feature Overview
+
+-   **Single Charts (Natal, Composite, SingleReturn):**
+    -   Planets now display a **radial line** connecting to the zodiac ring and a **rotated degree number** indicating their exact position, matching the style previously unique to outer planets in dual charts.
+-   **Dual Charts (Inner Wheel):**
+    -   Inner planets (Natal in Synastry/Transit) now receive the same indicators, positioned correctly at the boundary of the inner ring.
+-   **Optional Toggle:**
+    -   Introduced `show_degree_indicators` argument in `ChartDrawer` (default: `True`).
+    -   Allows users to disable these indicators for a cleaner look if desired.
+
+### Technical Details
+
+-   `_draw_secondary_points` logic was adapted into a new `_draw_primary_point_indicators` function for single charts.
+-   `_draw_inner_point_indicators` was added for inner wheels.
+-   Indicator offset logic was refined to ensure lines start/end exactly at the ring boundaries (radius 168 or zodiac edge).
+
 ## Backwards Compatibility Notes
 
-- Existing callers that **do not use cusp comparison** should see no behavioral change other than minor SVG width adjustments.
-- `HouseComparisonModel` is extended (not changed in existing fields), with new list attributes initialized via `default_factory=list`, so deserialization and type usage remain compatible.
-- `ChartDrawer` gains a `show_cusp_position_comparison` flag and additional logic, but existing code that does not pass this parameter continues to work with the default behavior present on this branch.
-- DualReturn charts now **visually** match Synastry more closely; any code or tests that relied on the old, more Transit-like layout will need to be updated to the new golden SVGs (already done in `tests/charts/svg`).
+-   Existing callers that **do not use cusp comparison** should see no behavioral change other than minor SVG width adjustments.
+-   `HouseComparisonModel` is extended (not changed in existing fields), with new list attributes initialized via `default_factory=list`, so deserialization and type usage remain compatible.
+-   `ChartDrawer` gains a `show_cusp_position_comparison` flag and additional logic, but existing code that does not pass this parameter continues to work with the default behavior present on this branch.
+-   DualReturn charts now **visually** match Synastry more closely; any code or tests that relied on the old, more Transit-like layout will need to be updated to the new golden SVGs (already done in `tests/charts/svg`).
