--- a/release_notes/v5.4.0.md
+++ b/release_notes/v5.4.0.md
@@ -111,7 +111,7 @@
 
 -   New helper: `calculate_cusps_in_reciprocal_houses` in `house_comparison_utils.py`:
 
-    -   Uses `get_houses_list` and the existing `get_planet_house` / `get_house_number` utilities to project each cusp from one subject into the other subjects house system.
+    -   Uses `get_houses_list` and the existing `get_planet_house` / `get_house_number` utilities to project each cusp from one subject into the other subject's house system.
     -   Implements robust **cusp house number extraction**, handling:
         -   Names like `"House 1"` (simple split + parse),
         -   Fallback via regex on numeric suffixes,
@@ -119,7 +119,7 @@
     -   Produces `PointInHouseModel` instances for cusps, with:
         -   Original owner house number & name.
         -   Projected house number & name.
-        -   Projected house owners name.
+        -   Projected house owner's name.
 
 ---
 
@@ -133,10 +133,10 @@
 
 -   Added/standardized keys across all supported languages (EN, FR, PT, IT, CN, ES, ...):
 
-    -   `"cusp_position_comparison"`  title for cusp comparison section.
-    -   `"transit_cusp"`  label for transit cusps.
-    -   `"return_cusp"`  label for return cusps.
-    -   `"house"`  base label used in `"Return House"`, `"Natal House"`, etc.
+    -   `"cusp_position_comparison"` — title for the cusp comparison section.
+    -   `"transit_cusp"` — label for transit cusps.
+    -   `"return_cusp"` — label for return cusps.
+    -   `"house"` — base label used in `"Return House"`, `"Natal House"`, etc.
 
 -   Fixed Spanish strings to:
     -   Introduce cusp-related labels.
@@ -183,8 +183,6 @@ These keys are now used by chart rendering and new tables, so all languages can 
     -   Updated Dual Return wheel layout.
     -   New labels ("Cusp Position Comparison", "Return Cusp", "Return House", etc.).
     -   Updated dynamic widths so that new tables are not clipped.
-
-These changes are **expected** and align tests with the new visual behavior.
 
 These changes are **expected** and align tests with the new visual behavior.
 
