fix: general; docs

--- a/release_notes/v5.4.0.md
+++ b/release_notes/v5.4.0.md
@@ -1,4 +1,4 @@
-# Kerykeion v5.4.0 — House Cusp Comparison & Dual Return Enhancements
+# Kerykeion — House Cusp Comparison & Dual Return Enhancements
 
 ## Highlights
 
